Fix sign-in overflow on larger screens.

--- a/oneplus/static/css/oneplus.css
+++ b/oneplus/static/css/oneplus.css
@@ -194,9 +194,8 @@ a.descriptor {
 @media (min-width: 30em) {
     .header .menu-login {
         float:left;
-        margin: 0px 0px 0px 17px;
+        margin: 0 0.5em;
         padding: 0px;
-        width: 50px;
     }
 
     .header .menu {
